# autoresearch-mlx

./: .gitignore  AGENTS.md  MANIFEST.txt  README_zh-TW.md  ai_peak_valley_detector.pine  prepare.py  program.md  pyproject.toml  results.tsv  run_phase2_only.py  stock_exploration_results.tsv  stock_pattern_research.py  stock_transfer_results.tsv  train.py
btc/: btc_auto.py  btc_backtest.py  btc_prepare.py  btc_strategy.py  btc_strategy.py.bak
btc1d/: README.md  btc_auto.py  btc_backtest.py  btc_prepare.py  btc_strategy.py
data/: GOOGL_1d_5y.csv  README.md
docs/: 01_快速開始.md  02_Codex_App_操作與提示詞.md  03_Codex_CLI_與腳本.md  04_常見錯誤與排查.md  05_操作流程速查.md
pine/: K線排列指標.pine  btc_12h_2h_macd_mtf_strategy.pine
pine/aapl_1d/: Sharpe1_strategy.pine
pine/btcusdt_2h/: BEST_strategy.pine  S01_strategy.pine  S03_strategy.pine
pine/btcusdt_5m/: BEST_strategy.pine  S01_strategy.pine  S03_strategy.pine  S04_strategy.pine  S06_strategy.pine
prompts/: 01_檢查環境與基線.txt  02_單次安全實驗.txt  03_分析失敗原因並提出下一步.txt  04_整理目前最佳版本.txt  05_安全回退.txt  06_最終鎖定測試前檢查.txt  07_執行最終鎖定測試.txt
references/: official_links.md
scripts/: append_result.py  codex_exec_once.sh  codex_worktree_setup.sh  run_baseline.sh  show_metrics.sh
